--- a/languages/pico8/config.toml
+++ b/languages/pico8/config.toml
@@ -1,13 +1,17 @@
-name = "Lua"
+name = "pico8"
 grammar = "lua"
-path_suffixes = ["lua"]
+path_suffixes = ["lua", "p8"]
 line_comments = ["-- "]
 autoclose_before = ";:.,=}])>"
 brackets = [
     { start = "{", end = "}", close = true, newline = true },
     { start = "[", end = "]", close = true, newline = true },
     { start = "(", end = ")", close = true, newline = true },
-    { start = "\"", end = "\"", close = true, newline = false, not_in = ["string"] },
-    { start = "'", end = "'", close = true, newline = false, not_in = ["string"] },
+    { start = "\"", end = "\"", close = true, newline = false, not_in = [
+        "string",
+    ] },
+    { start = "'", end = "'", close = true, newline = false, not_in = [
+        "string",
+    ] },
 ]
 collapsed_placeholder = "--[ ... ]--"
